DUALi_SDK_T250311/Sample source/Sample code for Vendor Reader/VC++/Felica SDK_UsingDualcardDLL VC++2010/Source Code/Felica_Sample_UsingDLL/Felica_Sample/DualCardDllHeader.h

extern "C" API_DLL int WINAPI GetErrMsg(int errcode,char* retmsg);
extern "C" API_DLL int WINAPI DE_InitPort(int nPort,int nBaud);
extern "C" API_DLL void WINAPI DE_ClosePort(int nPort);
extern "C" API_DLL int WINAPI DE_Polling(int nPort, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes, int timeout = 3000);//default timeout(only use for serial communication):3s
extern "C" API_DLL int WINAPI DE_SerialPolling(int nPort, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes, int timeout = 3000);//default timeout(only use for serial communication):3s
extern "C" API_DLL int WINAPI DE_ByPassCommand(int nPort, int datalen, BYTE Cmd, LPBYTE data, LPINT outlen, LPBYTE lpRes, int timeout = 3000);//default timeout:300ms
//Device control command
extern "C" API_DLL int WINAPI DE_RFOn(int nPort);
extern "C" API_DLL int WINAPI DE_RFOff(int nPort);
extern "C" API_DLL int WINAPI DE_RFReset(int nPort);
extern "C" API_DLL int WINAPI DE_BuzzerOff(int nPort);
extern "C" API_DLL int WINAPI DE_BuzzerOn(int nPort);
extern "C" API_DLL int WINAPI DE_ChangeDevice(int nPort, LPBYTE mode, int Inqflag);
extern "C" API_DLL int WINAPI DE_GetVersion(int nPort, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_ChangeTRXSpeed(int nPort, BYTE Trxspd);
extern "C" API_DLL int WINAPI DE_RWFlash(int nPort, BYTE flag, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes,BYTE offset,BYTE toread);
//Type B
extern "C" API_DLL int WINAPI DEB_Transparent(int nPort, BYTE datalen, LPBYTE data, BYTE TOUT, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEB_TransparentCRC(int nPort, BYTE datalen, LPBYTE data, LPBYTE crc, BYTE TOUT, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEB_BFRAMING(int nPort, BYTE Fvalue);
//Type A
extern "C" API_DLL int WINAPI DEA_Reset(int nPort, LPBYTE lpdelay);
extern "C" API_DLL int WINAPI DEA_Idle_Req(int nPort, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Wakeup_Req(int nPort, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Anticoll(int nPort, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Select(int nPort, LPBYTE uid, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Auth(int nPort, BYTE mode, BYTE keyno, BYTE blockno);
extern "C" API_DLL int WINAPI DEA_Halt(int nPort);
extern "C" API_DLL int WINAPI DEA_Read(int nPort, BYTE blockno, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Write(int nPort, BYTE blockno, int datalen, LPBYTE data);
extern "C" API_DLL int WINAPI DEA_Increment(int nPort, BYTE blockno, LPBYTE value);
extern "C" API_DLL int WINAPI DEA_Decrement(int nPort, BYTE blockno, LPBYTE value);
extern "C" API_DLL int WINAPI DEA_Inc_Transfer(int nPort, BYTE blockno, LPBYTE value, BYTE trblockno);
extern "C" API_DLL int WINAPI DEA_Dec_Transfer(int nPort, BYTE blockno, LPBYTE value, BYTE trblockno);
extern "C" API_DLL int WINAPI DEA_Restore(int nPort, BYTE blockno);
extern "C" API_DLL int WINAPI DEA_Transfer(int nPort, BYTE blockno);
extern "C" API_DLL int WINAPI DEA_Loadkey(int nPort, BYTE mode, BYTE keyno, LPBYTE keydata);
extern "C" API_DLL int WINAPI DEA_Authkey(int nPort, BYTE mode, LPBYTE keydata, BYTE blockno);
extern "C" API_DLL int WINAPI DEA_Req_Auth(int nPort, BYTE requestmode, BYTE authmode, BYTE keyno, BYTE blockno, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Req_Authkey(int nPort, BYTE requestmode, BYTE authmode, BYTE blockno, LPBYTE keydata, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Inc_Transfer2(int nPort, BYTE blockno, LPBYTE value, BYTE trblockno);
extern "C" API_DLL int WINAPI DEA_Dec_Transfer2(int nPort, BYTE blockno, LPBYTE value, BYTE trblockno);
extern "C" API_DLL int WINAPI DEA_Req_AuthRead(int nPort, BYTE requestmode, BYTE authmode, BYTE keyno, BYTE blockno, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Req_AuthkeyRead(int nPort, BYTE requestmode, BYTE authmode, BYTE blockno, LPBYTE keydata, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Req_AuthWrite(int nPort, BYTE requestmode, BYTE authmode, BYTE keyno, BYTE blockno, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Req_AuthkeyWrite(int nPort, BYTE requestmode, BYTE authmode, BYTE blockno, LPBYTE keydata, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_Req_Select(int nPort, BYTE requestmode, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_UltraM_Write(int nPort, BYTE address, LPBYTE data);
extern "C" API_DLL int WINAPI DEA_AntiSelLevel(int nPort, LPINT outlen, LPBYTE lpRes); //0x3D
extern "C" API_DLL int WINAPI DEA_AnticollLevel(int nPort, BYTE cmd, BYTE bitcnt,BYTE uidlen, LPBYTE uid, LPINT outlen, LPBYTE lpRes); //0x3E
extern "C" API_DLL int WINAPI DEA_SelectLevel(int nPort, BYTE cmd, LPBYTE Uid, LPINT outlen, LPBYTE lpRes); //0x3F
extern "C" API_DLL int WINAPI DEA_Transparent(int nPort, BYTE datalen, LPBYTE data, BYTE TOUT, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEA_TransparentCRC(int nPort, BYTE datalen, LPBYTE data, LPBYTE crc, BYTE TOUT, LPINT outlen, LPBYTE lpRes);
//TYPE A/B Common Function
extern "C" API_DLL int WINAPI DE_APDU(int nPort, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_FindCard(int nPort, BYTE baud, BYTE cid, BYTE nad, BYTE option, LPINT outlen, LPBYTE lpRes);
//Contact card command
extern "C" API_DLL int WINAPI DE_IC_PowerOn(int nPort, BYTE slotno, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_PPS(int nPort, BYTE slotno, int ppslen, LPBYTE ppsdata, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_Case1(int nPort, BYTE slotno, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_Case2(int nPort, BYTE slotno, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_Case3(int nPort, BYTE slotno, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_Case4(int nPort, BYTE slotno, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_PowerOff(int nPort, BYTE slotno);
extern "C" API_DLL int WINAPI DE_T1Bypass(int nPort, int apdulen, BYTE slotno, BYTE nad, BYTE pcb, BYTE lenth, LPBYTE apdu, BYTE Irc, LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DE_IC_Speed(int nPort, BYTE slotno, BYTE fidi);
extern "C" API_DLL int WINAPI DE_CARD_APDU(int nPort, BYTE slotno, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes);
//ETC
extern "C" API_DLL void WINAPI DE_GetDLLVersion(LPINT outlen, LPBYTE lpRes);
extern "C" API_DLL int WINAPI DEC_Transparent(int nPort, int datalen, LPBYTE data, LPINT outlen, LPBYTE lpRes, BYTE tout = 0xB0);//default timeout:300ms
//Get usb device list
extern "C" API_DLL int WINAPI DE_GetUSBDeviceList(int useserial = 1);
extern "C" API_DLL int WINAPI DE_GetUSBDeviceName(int nIDX, char* devname);